2007-12-11  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-12-09  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation by Choi, Ji-Hui.

2007-12-07  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2007-11-26  Marco Ciampa  <ciampix@libero.it>

	* it.po: Updated Italian translation.

2007-11-09  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-11-08  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-11-07  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-11-01  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-10-30  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Translation updated by Olle Niit.

2007-10-27  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: added tools/gimp-remote-x11.c

2007-10-26  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-10-25  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2007-10-24  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-10-22  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Khaled Hosny.

2007-10-22  Alexandre Prokoudine <alexandre.prokoudine@gmail.com>

	* ru.po: Updated Russian translation.

2007-10-22 Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation.

2007-10-21  Matic Žgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation by Martin Srebotnjak.

2007-10-19  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated by Árpád Bíró.

2007-10-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Laurent Monin and Stéphane
	Raimbault.

2007-10-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
