@@ -1,3 +1,7 @@
+2007-12-11  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added new files with translatable strings.
+
 2007-12-11  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
